# Digital-Twin-AI-ChatBot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build_image.yml  lint_python.yml  reviews.yml  test.yml
alembic/: env.py
alembic/versions/: a848b70f053c_add_user_and_chat_tables.py  dae9da249afc_add_database_model_tables.py
app/: database.py  main.py
app/crud/: user_crud.py
app/models/: base.py  users.py
app/routers/: users.py
app/validators/: validators.py
backend/: .env.example  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 61b58bc0333b_add_metadata_table.py
backend/lakehouse_data/chat/: 2025-10-23.json
backend/lakehouse_data/endpoints/: 2025-10-23.json
backend/lakehouse_data/parquet_data/chat_history/date=2025-10-23/event_prefix=question/: data_0.parquet
backend/lakehouse_data/parquet_data/test_table/timestamp=2025-10-23%2000%3A00%3A00/event_prefix=question/: data_0.parquet
backend/src/digital_twin/: __init__.py  config.py  database.py
backend/src/digital_twin/models/: __init__.py  chat.py  chat_message.py  hobby.py  metadata.py  occupation.py  persona.py  user.py
backend/src/digital_twin/prompts/: persona_prompt.py
backend/src/digital_twin/routers/: educations.py  hobbies.py  occupations.py  personas.py  questions_answers.py  users.py
backend/src/digital_twin/schemas/: __init__.py  chat.py  chat_message.py  education.py  hobby.py  occupation.py  question_answer.py  user.py
backend/src/digital_twin/services/: agent_executor.py  chat.py  education.py  hobby.py  multi_agent_supervisor_pattern.py  occupation.py  questions_answers.py  user.py
backend/src/digital_twin/utils/: lakehouse_export.py  lakehouse_manager.py  persona_format.py  security.py  toolkit.py
backend/tests/: test_education_routes.py  test_education_schema.py  test_hobby_schema.py  test_occupation_schema.py  test_persona_schema.py  test_user_routes.py
docs/: code.md  git_workflow.md  uv.md
frontend/: .env.production  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: axios.ts
migrations/: env.py
migrations/versions/: 3e98362b2b5e_create_user_table.py  70156a432d9a_create_user_table.py
src/: app.py
src/digital_twin/: __init__.py  config.py  database.py
tests/: test_education_schema.py  test_hobby_schema.py  test_occupation_schema.py  test_persona_schema.py
(+36 files in other folders)
