[project]
name = "ai-twin-consolidation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email,standard]>=2.11.10",
    "uvicorn[standard]>=0.37.0",
]
