[project]
name = "ai-twin-consolidation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.118.0",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email,standard]>=2.11.10",
    "uvicorn[standard]>=0.37.0",
]
