[project]
name = "digital-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
] 

[project.scripts]
digital-twin = "digital_twin:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "FAST"]
