[project]
name = "digital-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    "langchain>=0.3.27,<1.0",
    "langchain-google-genai>=2.1.12",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.31",
    "ddgs>=9.6.1",
    "langchain-core>=0.3.79",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "uvicorn>=0.37.0",
    "pyarrow>=21.0.0",
    "pandas>=2.3.3",
    "duckdb>=1.4.1",
    "langgraph>=1.0.1",
    "pytest-cov>=7.0.0",
] 

[project.scripts]
digital-twin = "digital_twin:main"
lakehouse = "digital_twin.utils.lakehouse_manager:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "FAST"]
